Fix nav z-index

--- a/src/components/Nav/styles.css
+++ b/src/components/Nav/styles.css
@@ -4,7 +4,7 @@ nav{
     justify-content: space-between;
     width: calc(100% - 48px);
     padding: 0 24px;
-    z-index: 5;
+    z-index: 100000000;
     position: fixed;
     top: 0;
     left: 0;
